--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.3.0",
-    "dotenv": "^16.0.3"
+    "mysql2": "^3.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
