--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.3.0"
   },
   "devDependencies": {
